{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 466,
  "lineage": "5d1b7028-3d1f-609f-da8e-cb8f7c86f69d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "recred",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049d0831afe26e014",
            "association_id": "eipassoc-094780669aac7edf9",
            "domain": "vpc",
            "id": "eipalloc-049d0831afe26e014",
            "instance": "i-0fd6081caed3b50d3",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0d0d62029100cde43",
            "private_dns": "ip-10-0-1-13.eu-west-3.compute.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-15-188-13-134.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.13.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "recred_eip_0"
            },
            "tags_all": {
              "Name": "recred_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.recred",
            "aws_key_pair.recred",
            "aws_security_group.recred_service",
            "aws_subnet.recred_public",
            "aws_vpc.recred",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "tls_private_key.recred"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "recred",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058cbb29e232feceb",
            "arn": "arn:aws:ec2:eu-west-3:465843813700:instance/i-0fd6081caed3b50d3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd6081caed3b50d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "recred",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d0d62029100cde43",
            "private_dns": "ip-10-0-1-13.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f4215404c84d476",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5bdd28f81e927bd",
            "tags": {
              "Name": "recred_0"
            },
            "tags_all": {
              "Name": "recred_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fc3aaa9337191722"
            ]
          },
          "dependencies": [
            "aws_key_pair.recred",
            "aws_security_group.recred_service",
            "aws_subnet.recred_public",
            "aws_vpc.recred",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "tls_private_key.recred"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "recred",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:465843813700:internet-gateway/igw-057d390621e1eca43",
            "id": "igw-057d390621e1eca43",
            "owner_id": "465843813700",
            "tags": {
              "Name": "recred"
            },
            "tags_all": {
              "Name": "recred"
            },
            "vpc_id": "vpc-0b3bee2397056edfa"
          },
          "dependencies": [
            "aws_vpc.recred"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "recred_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:465843813700:route-table/rtb-0ba149ad7521f9647",
            "id": "rtb-0ba149ad7521f9647",
            "owner_id": "465843813700",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "recred_private"
            },
            "tags_all": {
              "Name": "recred_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3bee2397056edfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.recred"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "recred_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:465843813700:route-table/rtb-0bbc604edef1616b9",
            "id": "rtb-0bbc604edef1616b9",
            "owner_id": "465843813700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057d390621e1eca43",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "recred_public"
            },
            "tags_all": {
              "Name": "recred_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3bee2397056edfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.recred",
            "aws_vpc.recred"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "recred_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061c86ad265c62da1",
            "route_table_id": "rtb-0ba149ad7521f9647",
            "subnet_id": "subnet-0671a16eb9bde51ec"
          },
          "dependencies": [
            "aws_route_table.recred_private",
            "aws_subnet.recred_private",
            "aws_vpc.recred",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066aaaf2584cdb28f",
            "route_table_id": "rtb-0ba149ad7521f9647",
            "subnet_id": "subnet-05d00c8f2bcf172a5"
          },
          "dependencies": [
            "aws_route_table.recred_private",
            "aws_subnet.recred_private",
            "aws_vpc.recred",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "recred_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02540ce8766951636",
            "route_table_id": "rtb-0bbc604edef1616b9",
            "subnet_id": "subnet-0a5bdd28f81e927bd"
          },
          "dependencies": [
            "aws_internet_gateway.recred",
            "aws_route_table.recred_public",
            "aws_subnet.recred_public",
            "aws_vpc.recred",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "recred_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:465843813700:security-group/sg-0dda8d4866a9b6511",
            "description": "Security group for recred databases",
            "egress": [],
            "id": "sg-0dda8d4866a9b6511",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow postgres traffic from only recred service",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc3aaa9337191722"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "recred_db",
            "name_prefix": "",
            "owner_id": "465843813700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "recred_db"
            },
            "tags_all": {
              "Name": "recred_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3bee2397056edfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.recred_service",
            "aws_vpc.recred"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "recred_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:465843813700:security-group/sg-0fc3aaa9337191722",
            "description": "Security group for recred service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc3aaa9337191722",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "38.242.177.232/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "recred_service",
            "name_prefix": "",
            "owner_id": "465843813700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "recred_service"
            },
            "tags_all": {
              "Name": "recred_service"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3bee2397056edfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.recred"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "recred_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:465843813700:subnet/subnet-0671a16eb9bde51ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0671a16eb9bde51ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "465843813700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "recred_private_0"
            },
            "tags_all": {
              "Name": "recred_private_0"
            },
            "vpc_id": "vpc-0b3bee2397056edfa"
          },
          "dependencies": [
            "aws_vpc.recred",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:465843813700:subnet/subnet-05d00c8f2bcf172a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d00c8f2bcf172a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "465843813700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "recred_private_1"
            },
            "tags_all": {
              "Name": "recred_private_1"
            },
            "vpc_id": "vpc-0b3bee2397056edfa"
          },
          "dependencies": [
            "aws_vpc.recred",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "recred_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:465843813700:subnet/subnet-0a5bdd28f81e927bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5bdd28f81e927bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "465843813700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "recred_public_0"
            },
            "tags_all": {
              "Name": "recred_public_0"
            },
            "vpc_id": "vpc-0b3bee2397056edfa"
          },
          "dependencies": [
            "aws_vpc.recred",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "recred",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:465843813700:vpc/vpc-0b3bee2397056edfa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0214a1185ecd98cbb",
            "default_route_table_id": "rtb-0e5ab03d60e8bc1e6",
            "default_security_group_id": "sg-0429cc80177a23b47",
            "dhcp_options_id": "dopt-063529e734e87c7ae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b3bee2397056edfa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5ab03d60e8bc1e6",
            "owner_id": "465843813700",
            "tags": {
              "Name": "recred"
            },
            "tags_all": {
              "Name": "recred"
            }
          }
        }
      ]
    }
  ]
}